# gh-stats

./: .gitattributes  .gitignore  .pre-commit-config.yaml  RELEASE_NOTES.rst  TODO.txt  readme.md  release_notes.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
gh_stats/: gh_stats.py  ghstat.py  ghstats.py  stats.py
src/gh_stats/: argparser.py  gh_stats.py  stats.py
test/: test_data.json  test_gh_stats.py  test_ghstat.py
