[metadata]
name = gh_stats
version = 1.1.0
description = Get statistics about your Github commit history
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/ttibsi/gh-stats
author = Ttibsi
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    PyInputPlus
    requests
python_requires = >=3.7

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    ghstats = gh_stats.ghstats:main

[flake8]
max-line-length = 88
extend-ignore = E203, E501

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-test.*]
disallow_untyped_defs = false
